--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://kirat13.github.io/My_Portfolio/",
-  "name": "My_Portfolio",
+  "homepage": "https://kirat13.github.io/Portfolio/",
+  "name": "portfolio-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
