--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kirat13.io.com/My-Portfolio/",
+  "homepage": "https://kirat13.io.com/Portfolio/",
   "name": "portfolio-react",
   "private": true,
   "version": "0.0.0",
